@@ -216,11 +216,13 @@ class FsDatasetImpl implements FsDatasetSpi<FsVolumeImpl> {
   final DataStorage dataStorage;
   final FsVolumeList volumes;
   final Map<String, DatanodeStorage> storageMap;
-  final ReplicaMap volumeMap;
   final FsDatasetAsyncDiskService asyncDiskService;
   final FsDatasetCache cacheManager;
   private final Configuration conf;
   private final int validVolsRequired;
+  
+  final ReplicaMap volumeMap;
+  final Map<String, Set<Long>> deletingBlock;
 
   // Used for synchronizing access to usage stats
   private final Object statsLock = new Object();
@@ -275,7 +277,9 @@ class FsDatasetImpl implements FsDatasetSpi<FsVolumeImpl> {
             VolumeChoosingPolicy.class), conf);
     volumes = new FsVolumeList(volumeFailureInfos, datanode.getBlockScanner(),
         blockChooserImpl);
-    asyncDiskService = new FsDatasetAsyncDiskService(datanode);
+    asyncDiskService = new FsDatasetAsyncDiskService(datanode, this);
+    deletingBlock = new HashMap<String, Set<Long>>();
+
     for (int idx = 0; idx < storage.getNumStorageDirs(); idx++) {
       addVolume(dataLocations, storage.getStorageDir(idx));
     }
@@ -1671,7 +1675,12 @@ class FsDatasetImpl implements FsDatasetSpi<FsVolumeImpl> {
               ". Parent not found for file " + f);
           continue;
         }
-        volumeMap.remove(bpid, invalidBlk);
+        ReplicaInfo removing = volumeMap.remove(bpid, invalidBlk);
+        addDeletingBlock(bpid, removing.getBlockId());
+        if (LOG.isDebugEnabled()) {
+          LOG.debug("Block file " + removing.getBlockFile().getName()
+              + " is to be deleted");
+        }
       }
     
       // If a DFSClient has the replica in its cache of short-circuit file
@@ -2561,5 +2570,35 @@ class FsDatasetImpl implements FsDatasetSpi<FsVolumeImpl> {
         
     FileStatus fss = localFS.getFileStatus(new Path(f.getAbsolutePath()));
     return fss.getPermission().getStickyBit();
+  }
+  
+  @Override
+  public boolean isDeletingBlock(String bpid, long blockId) {
+    synchronized(deletingBlock) {
+      Set<Long> s = deletingBlock.get(bpid);
+      return s != null ? s.contains(blockId) : false;
+    }
+  }
+  
+  public void removeDeletedBlocks(String bpid, Set<Long> blockIds) {
+    synchronized (deletingBlock) {
+      Set<Long> s = deletingBlock.get(bpid);
+      if (s != null) {
+        for (Long id : blockIds) {
+          s.remove(id);
+        }
+      }
+    }
+  }
+  
+  private void addDeletingBlock(String bpid, Long blockId) {
+    synchronized(deletingBlock) {
+      Set<Long> s = deletingBlock.get(bpid);
+      if (s == null) {
+        s = new HashSet<Long>();
+        deletingBlock.put(bpid, s);
+      }
+      s.add(blockId);
+    }
   }
 }
