@@ -818,6 +818,9 @@ Release 2.7.0 - UNRELEASED
     HDFS-7880. Remove the tests for legacy Web UI in branch-2.
     (Brahma Reddy Battula via aajisaka)
 
+    HDFS-6833.  DirectoryScanner should not register a deleting block with
+    memory of DataNode.  (Shinichi Yamashita via szetszwo)
+
     BREAKDOWN OF HDFS-7584 SUBTASKS AND RELATED JIRAS
 
       HDFS-7720. Quota by Storage Type API, tools and ClientNameNode
